--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,18 +1,18 @@
 <footer class="footer">
-    <div class="_container">
+    <div class="footer__container">
         <div class="footer__body">
             <a href="#" class="footer__logo">
-                <img src="img/logoF.png" alt="" />
+                <img src="img/logoF.png" alt="Logo" />
             </a>
             <nav class="footer__menu">
                 <ul class="footer__list">
-                    <li><a href="#" class="footer__link">Home</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Home</a></li>
 
-                    <li><a href="#" class="footer__link">Facebook</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Facebook</a></li>
 
-                    <li><a href="#" class="footer__link">Linkedin</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Linkedin</a></li>
 
-                    <li><a href="#" class="footer__link">Contact</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Contact</a></li>
                 </ul>
             </nav>
             <a href="#" class="footer__text">© 2015. All Rights Reserved</a>
