--- a/src/home.html
+++ b/src/home.html
@@ -1,48 +1,47 @@
 <!DOCTYPE html>
-<html lang="ru">
-    @@include('html/_head.htm',{ "title":"Главная" })
+<html lang="en">
+    @@include('html/_head.htm',{ "title":"Binary" })
 
     <body>
         <div class="wrapper">
             @@include('html/_header.htm',{})
             <main class="page">
-                <div class="mainblock">
-                    <div class="mainblock__content">
-                        <div class="_container">
+                <div data-fullscreen class="mainblock">
+                    <div class="mainblock__container">
+                        <div class="mainblock__content">
                             <a href="#" class="mainblock__logo">
-                                <img src="img/logoH.png" alt="" />
+                                <img src="@img/logoH.png" alt="" />
                             </a>
                             <div class="mainblock__text">
                                 <div class="mainblock__title">Clear, smart, attractive design</div>
                                 <div class="mainblock__subtitle">for your app, logo, website</div>
                             </div>
                             <div class="mainblock__footer">
-                                <a href="#content" class="mainblock__btn btn btn_w _goto"><span>READ MORE</span></a>
-                                <a href="#content" class="mainblock__arrow _goto">
-                                    <img src="img/icons/arrow_down.png" alt="" />
+                                <a href="#" class="mainblock__button button button_w"><span>READ MORE</span></a>
+                                <a href="#content" data-goto="" class="mainblock__arrow">
+                                    <img src="@img/icons/arrow_down.png" alt="" />
                                 </a>
                             </div>
                         </div>
                     </div>
-                    <div class="mainblock__image _ibg">
-                        <img src="img/bg_header.jpg" alt="" />
+                    <div class="mainblock__image-ibg">
+                        <img src="@img/bg_header.jpg" alt="" />
                     </div>
                 </div>
-                <div class="content">
+
+                <div class="content" id="content">
                     <div class="menu menu_mb">
-                        <div class="_container">
-                            <nav class="menu__items">
-                                <ul class="menu__list">
-                                    <li><a href="#" class="menu__link menu__link_act">HOME</a></li>
-                                    <li><a href="#" class="menu__link">ABOUT US</a></li>
-                                    <li><a href="#" class="menu__link">PORTFOLIO</a></li>
-                                    <li><a href="#" class="menu__link">CONTACT</a></li>
-                                </ul>
-                            </nav>
-                        </div>
+                        <nav class="menu__body">
+                            <ul class="menu__list">
+                                <li class="menu__item"><a href="#" class="menu__link">HOME</a></li>
+                                <li class="menu__item"><a href="#" class="menu__link">ABOUT US</a></li>
+                                <li class="menu__item"><a href="#" class="menu__link">PORTFOLIO</a></li>
+                                <li class="menu__item"><a href="#" class="menu__link">CONTACT</a></li>
+                            </ul>
+                        </nav>
                     </div>
                     <div class="about">
-                        <div class="_container">
+                        <div class="about__container">
                             <div class="about__header-block header-block">
                                 <div class="header-block__title">ABOUT</div>
                                 <div class="header-block__subtitle">
@@ -57,7 +56,7 @@
                                     <div class="about__column">
                                         <div class="about__item">
                                             <div class="about__icon">
-                                                <img src="img/About/01.png" alt="" />
+                                                <img src="@img/About/01.png" alt="" />
                                             </div>
                                             <div class="about__title">WEB</div>
                                             <div class="about__text">
@@ -69,7 +68,7 @@
                                     <div class="about__column">
                                         <div class="about__item">
                                             <div class="about__icon">
-                                                <img src="img/About/02.png" alt="" />
+                                                <img src="@img/About/02.png" alt="" />
                                             </div>
                                             <div class="about__title">iOS AND ANDROID</div>
                                             <div class="about__text">
@@ -81,7 +80,7 @@
                                     <div class="about__column">
                                         <div class="about__item">
                                             <div class="about__icon about__icon_l">
-                                                <img src="img/About/03.png" alt="" />
+                                                <img src="@img/About/03.png" alt="" />
                                             </div>
                                             <div class="about__title">MARKETING</div>
                                             <div class="about__text">
@@ -95,7 +94,7 @@
                         </div>
                     </div>
                     <div class="portfolio">
-                        <div class="_container">
+                        <div class="portfolio__container">
                             <div class="portfolio__header-block header-block">
                                 <div class="header-block__title">PORTFOLIO</div>
                             </div>
@@ -109,70 +108,70 @@
                             </nav>
                             <div class="portfolio__items _gallery">
                                 <div class="portfolio__column f_4">
-                                    <a href="img/Portfolio/01.jpg" class="portfolio__item">
-                                        <img src="img/Portfolio/01.jpg" alt="" />
+                                    <a href="@img/Portfolio/01.jpg" class="portfolio__item">
+                                        <img src="@img/Portfolio/01.jpg" alt="" />
                                     </a>
                                 </div>
                                 <div class="portfolio__column f_4">
-                                    <a href="img/Portfolio/02.jpg" class="portfolio__item">
-                                        <img src="img/Portfolio/02.jpg" alt="" />
+                                    <a href="@img/Portfolio/02.jpg" class="portfolio__item">
+                                        <img src="@img/Portfolio/02.jpg" alt="" />
                                     </a>
                                 </div>
                                 <div class="portfolio__column f_2">
-                                    <a href="img/Portfolio/03.jpg" class="portfolio__item">
-                                        <img src="img/Portfolio/03.jpg" alt="" />
+                                    <a href="@img/Portfolio/03.jpg" class="portfolio__item">
+                                        <img src="@img/Portfolio/03.jpg" alt="" />
                                     </a>
                                 </div>
                                 <div class="portfolio__column f_2">
-                                    <a href="img/Portfolio/04.jpg" class="portfolio__item">
-                                        <img src="img/Portfolio/04.jpg" alt="" />
+                                    <a href="@img/Portfolio/04.jpg" class="portfolio__item">
+                                        <img src="@img/Portfolio/04.jpg" alt="" />
                                     </a>
                                 </div>
                                 <div class="portfolio__column f_3">
-                                    <a href="img/Portfolio/05.jpg" class="portfolio__item">
-                                        <img src="img/Portfolio/05.jpg" alt="" />
+                                    <a href="@img/Portfolio/05.jpg" class="portfolio__item">
+                                        <img src="@img/Portfolio/05.jpg" alt="" />
                                     </a>
                                 </div>
                                 <div class="portfolio__column f_2">
-                                    <a href="img/Portfolio/06.jpg" class="portfolio__item">
-                                        <img src="img/Portfolio/06.jpg" alt="" />
+                                    <a href="@img/Portfolio/06.jpg" class="portfolio__item">
+                                        <img src="@img/Portfolio/06.jpg" alt="" />
                                     </a>
                                 </div>
                             </div>
                             <div class="portfolio__footer">
-                                <a href="#" class="portfolio__btn btn btn_b"> <span> READ MORE</span></a>
+                                <a href="#" class="portfolio__button button button_b"> <span> READ MORE</span></a>
                             </div>
                         </div>
                     </div>
                     <div class="partners">
-                        <div class="_container">
+                        <div class="partners__container">
                             <div class="partners__title">Our partners</div>
                             <div class="partners__items">
                                 <div class="partners__column">
                                     <div class="partners__item">
-                                        <img src="img/Partners/01.png" alt="" />
+                                        <img src="@img/Partners/01.png" alt="" />
                                     </div>
                                 </div>
                                 <div class="partners__column">
                                     <div class="partners__item">
-                                        <img src="img/Partners/02.png" alt="" />
+                                        <img src="@img/Partners/02.png" alt="" />
                                     </div>
                                 </div>
                                 <div class="partners__column">
                                     <div class="partners__item">
-                                        <img src="img/Partners/03.png" alt="" />
+                                        <img src="@img/Partners/03.png" alt="" />
                                     </div>
                                 </div>
                                 <div class="partners__column">
                                     <div class="partners__item">
-                                        <img src="img/Partners/04.png" alt="" />
+                                        <img src="@img/Partners/04.png" alt="" />
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="contacts">
-                        <div class="_container">
+                        <div class="contacts__container">
                             <div class="contacts__header-block header-block">
                                 <div class="header-block__title">Contact</div>
                             </div>
@@ -218,7 +217,9 @@
                                                     class="input _req"
                                                 ></textarea>
                                             </div>
-                                            <button type="submit" class="form-contacts__btn btn btn_b"><span>Send</span></button>
+                                            <button type="submit" class="form-contacts__button button button_b">
+                                                <span>Send</span>
+                                            </button>
                                         </div>
                                     </form>
                                 </div>
@@ -231,10 +232,10 @@
                                         <div class="contacts__name">Postma Elena</div>
                                         <div class="contacts__social social">
                                             <a href="#" class="social__item">
-                                                <img src="img/icons/iconFB.png" alt="" />
+                                                <img src="@img/icons/iconFB.png" alt="" />
                                             </a>
                                             <a href="#" class="social__item">
-                                                <img src="img/icons/iconLnI.png" alt="" />
+                                                <img src="@img/icons/iconLnI.png" alt="" />
                                             </a>
                                         </div>
                                         <div class="contacts__email">
@@ -249,6 +250,6 @@
             </main>
             @@include('html/_footer.htm',{})
         </div>
-        @@include('html/_popup.htm',{}) @@include('html/_js.htm',{})
+        @@include('html/_js.htm',{})
     </body>
 </html>
