--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -2,7 +2,7 @@
     <div class="footer__container">
         <div class="footer__body">
             <a href="#" class="footer__logo">
-                <img src="img/logoF.png" alt="Logo" />
+                <img src="@img/logoF.png" alt="Logo" />
             </a>
             <nav class="footer__menu">
                 <ul class="footer__list">
