--- a/src/home.html
+++ b/src/home.html
@@ -4,52 +4,52 @@
 
     <body>
         <div class="wrapper">
-            @@include('html/_header.htm',{})
+            <!-- @@include('html/_header.htm',{}) -->
             <main class="page">
-                <div data-fullscreen class="mainblock">
+                <section data-fullscreen class="mainblock">
                     <div class="mainblock__container">
                         <div class="mainblock__content">
                             <a href="#" class="mainblock__logo">
-                                <img src="@img/logoH.png" alt="" />
+                                <img src="@img/logoH.png" alt="logo" />
                             </a>
-                            <div class="mainblock__text">
+                            <h1 class="mainblock__text">
                                 <div class="mainblock__title">Clear, smart, attractive design</div>
                                 <div class="mainblock__subtitle">for your app, logo, website</div>
-                            </div>
+                            </h1>
                             <div class="mainblock__footer">
                                 <a href="#" class="mainblock__button button button_w"><span>READ MORE</span></a>
                                 <a href="#content" data-goto="" class="mainblock__arrow">
-                                    <img src="@img/icons/arrow_down.png" alt="" />
+                                    <img src="@img/icons/arrow_down.png" alt="arrow icon" />
                                 </a>
                             </div>
                         </div>
                     </div>
                     <div class="mainblock__image-ibg">
-                        <img src="@img/bg_header.jpg" alt="" />
+                        <img src="@img/bg_header.jpg" alt="background" />
                     </div>
-                </div>
+                </section>
 
                 <div class="content" id="content">
                     <div class="menu menu_mb">
                         <nav class="menu__body">
                             <ul class="menu__list">
-                                <li class="menu__item"><a href="#" class="menu__link">HOME</a></li>
+                                <li class="menu__item"><a href="#" class="menu__link menu__link_act">HOME</a></li>
                                 <li class="menu__item"><a href="#" class="menu__link">ABOUT US</a></li>
                                 <li class="menu__item"><a href="#" class="menu__link">PORTFOLIO</a></li>
                                 <li class="menu__item"><a href="#" class="menu__link">CONTACT</a></li>
                             </ul>
                         </nav>
                     </div>
-                    <div class="about">
+                    <section class="about">
                         <div class="about__container">
                             <div class="about__header-block header-block">
-                                <div class="header-block__title">ABOUT</div>
-                                <div class="header-block__subtitle">
+                                <h2 class="header-block__title">ABOUT</h2>
+                                <p class="header-block__subtitle">
                                     We specialize in contemporary, functional, and stunning websites with design that really
                                     brings that "WOW" factor. In our design process, we make sure to stay one step ahead of the
                                     latest trends, <br />
                                     never forgetting to abide by key web standards.
-                                </div>
+                                </p>
                             </div>
                             <div class="about__body">
                                 <div class="about__row">
@@ -92,7 +92,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </section>
                     <div class="portfolio">
                         <div class="portfolio__container">
                             <div class="portfolio__header-block header-block">
