--- a/src/home.html
+++ b/src/home.html
@@ -40,6 +40,7 @@
                             </ul>
                         </nav>
                     </div>
+
                     <section class="about">
                         <div class="about__container">
                             <div class="about__header-block header-block">
@@ -56,9 +57,9 @@
                                     <div class="about__column">
                                         <div class="about__item">
                                             <div class="about__icon">
-                                                <img src="@img/About/01.png" alt="" />
+                                                <img src="@img/About/01.png" alt="web" />
                                             </div>
-                                            <div class="about__title">WEB</div>
+                                            <h4 class="about__title">WEB</h4>
                                             <div class="about__text">
                                                 We tend to deliver unique and functional design, through innovation and
                                                 creativity.
@@ -68,9 +69,9 @@
                                     <div class="about__column">
                                         <div class="about__item">
                                             <div class="about__icon">
-                                                <img src="@img/About/02.png" alt="" />
+                                                <img src="@img/About/02.png" alt="ios and android" />
                                             </div>
-                                            <div class="about__title">iOS AND ANDROID</div>
+                                            <h4 class="about__title">iOS AND ANDROID</h4>
                                             <div class="about__text">
                                                 We seek to bring new businesses and customers closer together through valuable
                                                 insights and proper targeting.
@@ -80,9 +81,9 @@
                                     <div class="about__column">
                                         <div class="about__item">
                                             <div class="about__icon about__icon_l">
-                                                <img src="@img/About/03.png" alt="" />
+                                                <img src="@img/About/03.png" alt="marketing" />
                                             </div>
-                                            <div class="about__title">MARKETING</div>
+                                            <h4 class="about__title">MARKETING</h4>
                                             <div class="about__text">
                                                 We’ll help you establish the right goals and build the right paths. Success
                                                 depends on setting the right intention.
@@ -93,56 +94,46 @@
                             </div>
                         </div>
                     </section>
-                    <div class="portfolio">
+
+                    <section class="portfolio">
                         <div class="portfolio__container">
                             <div class="portfolio__header-block header-block">
-                                <div class="header-block__title">PORTFOLIO</div>
+                                <h2 class="header-block__title">PORTFOLIO</h2>
                             </div>
-                            <nav class="portfolio__filter filter">
+                            <nav class="portfolio__filter _filter">
                                 <ul class="filter__list">
-                                    <li data-filter="1" class="filter__item active">All</li>
+                                    <li data-filter="1" class="filter__item _active">All</li>
                                     <li data-filter="2" class="filter__item">Web</li>
                                     <li data-filter="3" class="filter__item">Apps</li>
                                     <li data-filter="4" class="filter__item">Other</li>
                                 </ul>
                             </nav>
-                            <div class="portfolio__items _gallery">
-                                <div class="portfolio__column f_4">
-                                    <a href="@img/Portfolio/01.jpg" class="portfolio__item">
-                                        <img src="@img/Portfolio/01.jpg" alt="" />
-                                    </a>
-                                </div>
-                                <div class="portfolio__column f_4">
-                                    <a href="@img/Portfolio/02.jpg" class="portfolio__item">
-                                        <img src="@img/Portfolio/02.jpg" alt="" />
-                                    </a>
-                                </div>
-                                <div class="portfolio__column f_2">
-                                    <a href="@img/Portfolio/03.jpg" class="portfolio__item">
-                                        <img src="@img/Portfolio/03.jpg" alt="" />
-                                    </a>
-                                </div>
-                                <div class="portfolio__column f_2">
-                                    <a href="@img/Portfolio/04.jpg" class="portfolio__item">
-                                        <img src="@img/Portfolio/04.jpg" alt="" />
-                                    </a>
-                                </div>
-                                <div class="portfolio__column f_3">
-                                    <a href="@img/Portfolio/05.jpg" class="portfolio__item">
-                                        <img src="@img/Portfolio/05.jpg" alt="" />
-                                    </a>
-                                </div>
-                                <div class="portfolio__column f_2">
-                                    <a href="@img/Portfolio/06.jpg" class="portfolio__item">
-                                        <img src="@img/Portfolio/06.jpg" alt="" />
-                                    </a>
-                                </div>
-                            </div>
+                            <ul data-gallery class="portfolio__items">
+                                <li data-src="@img/Portfolio/01.jpg" class="portfolio__column-ibg f_4">
+                                    <img src="@img/Portfolio/01.jpg" alt="01" />
+                                </li>
+                                <li data-src="@img/Portfolio/02.jpg" class="portfolio__column-ibg f_4">
+                                    <img src="@img/Portfolio/02.jpg" alt="02" />
+                                </li>
+                                <li data-src="@img/Portfolio/03.jpg" class="portfolio__column-ibg f_2">
+                                    <img src="@img/Portfolio/03.jpg" alt="03" />
+                                </li>
+                                <li data-src="@img/Portfolio/04.jpg" class="portfolio__column-ibg f_2">
+                                    <img src="@img/Portfolio/04.jpg" alt="04" />
+                                </li>
+                                <li data-src="@img/Portfolio/05.jpg" class="portfolio__column-ibg f_3">
+                                    <img src="@img/Portfolio/05.jpg" alt="05" />
+                                </li>
+                                <li data-src="@img/Portfolio/06.jpg" class="portfolio__column-ibg f_2">
+                                    <img src="@img/Portfolio/06.jpg" alt="06" />
+                                </li>
+                            </ul>
                             <div class="portfolio__footer">
-                                <a href="#" class="portfolio__button button button_b"> <span> READ MORE</span></a>
+                                <a href="#" class="portfolio__button button button_b"><span> READ MORE</span></a>
                             </div>
                         </div>
-                    </div>
+                    </section>
+
                     <div class="partners">
                         <div class="partners__container">
                             <div class="partners__title">Our partners</div>
