--- a/src/home.html
+++ b/src/home.html
@@ -186,7 +186,7 @@
                                                             autocomplete="off"
                                                             type="text"
                                                             name="email"
-                                                            data-error="error"
+                                                            data-error="Wrong email address"
                                                             placeholder=""
                                                             class="input"
                                                             data-required="email"
