--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Верстка «NEW_PROJECT_NAME»</title>
-	</head>
-	body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Верстка «NEW_PROJECT_NAME»</title>
+    </head>
+    <body>
         <div class="rootpage">
             <h1>«NEW_PROJECT_NAME»</h1>
             <div class="rootpage__info">Project Features</div>
