--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,10 +1,10 @@
 <header class="menu menu_mb">
     <nav class="menu__container">
         <ul class="menu__list">
-            <li class="menu__item"><a href="#" class="menu__link">HOME</a></li>
-            <li class="menu__item"><a href="#" class="menu__link">ABOUT US</a></li>
-            <li class="menu__item"><a href="#" class="menu__link">PORTFOLIO</a></li>
-            <li class="menu__item"><a href="#" class="menu__link">CONTACT</a></li>
+            <li class="menu__item"><a href="#" data-goto=".mainblock" class="menu__link">HOME</a></li>
+            <li class="menu__item"><a href="#" data-goto=".about" class="menu__link">ABOUT US</a></li>
+            <li class="menu__item"><a href="#" data-goto=".portfolio" class="menu__link">PORTFOLIO</a></li>
+            <li class="menu__item"><a href="#" data-goto=".contacts" class="menu__link">CONTACT</a></li>
         </ul>
     </nav>
 </header>
